# GaborNet

./: .deepsource.toml  .gitignore  .pylintrc  .travis.yml  01_04_AffectiveNet_convnet_acc_test.npy  01_04_AffectiveNet_convnet_acc_train.npy  01_04_AffectiveNet_convnet_loss_test.npy  01_04_AffectiveNet_convnet_loss_train.npy  01_04_AffectiveNet_new_init_one_layer_gnet_acc_test.npy  01_04_AffectiveNet_new_init_one_layer_gnet_acc_train.npy  01_04_AffectiveNet_new_init_one_layer_gnet_loss_test.npy  01_04_AffectiveNet_new_init_one_layer_gnet_loss_train.npy  08_02_convnet_acc_test.npy  08_02_convnet_acc_train.npy  08_02_convnet_loss_test.npy  08_02_convnet_loss_train.npy  AffectivNetDataloader.py  AffectiveNet_convnet_acc_test.npy  AffectiveNet_convnet_acc_train.npy  AffectiveNet_convnet_loss_test.npy  AffectiveNet_convnet_loss_train.npy  AffectiveNet_new_init_one_layer_gnet_acc_test.npy  AffectiveNet_new_init_one_layer_gnet_acc_train.npy  AffectiveNet_new_init_one_layer_gnet_loss_test.npy  AffectiveNet_new_init_one_layer_gnet_loss_train.npy  AffectiveNet_one_layer_gnet_acc_test.npy  AffectiveNet_one_layer_gnet_acc_train.npy  AffectiveNet_one_layer_gnet_loss_test.npy  AffectiveNet_one_layer_gnet_loss_train.npy  AlexNet + GLayers on EMONEW.ipynb  CNNArchitectures-2018_2.ipynb  CODE_OF_CONDUCT.md  Check Glayer.ipynb  DC_new_init_one_layer_gnet_acc_test.npy  DC_new_init_one_layer_gnet_acc_test_20_03.npy  DC_new_init_one_layer_gnet_acc_train.npy  DC_new_init_one_layer_gnet_acc_train_20_03.npy  DC_new_init_one_layer_gnet_loss_test.npy  DC_new_init_one_layer_gnet_loss_test_20_03.npy  DC_new_init_one_layer_gnet_loss_train.npy  (+69 more)
.dvc/: config
.ipynb_checkpoints/: Gabor Filter-checkpoint.ipynb  GaborFilter and GaborNet implementation -checkpoint.ipynb  GaborFilter and GaborNet implementation old-checkpoint.ipynb  GaborNet v.1-checkpoint.ipynb  Untitled-checkpoint.ipynb  [TESTS] AlexNet-like architecture. AffectiveNet dataset-checkpoint.ipynb  [TESTS] AlexNet-like architecture. Dogs vs Cats dataset-checkpoint.ipynb  [TESTS] Pretrained AlexNet-checkpoint.ipynb
AffectiveNet_one_layer_gnet 03.02.19/: AffectiveNet_one_layer_gnet_acc_test.npy  AffectiveNet_one_layer_gnet_acc_train.npy  AffectiveNet_one_layer_gnet_loss_test.npy  AffectiveNet_one_layer_gnet_loss_train.npy
Authentic final code/: EMONEWDataloader.py  GaborLayers.py
GaborNet/: GaborLayer.py  GaborLayerNew.py  GaborLayers.py  __init__.py
docs/: README.md
sanity_check/: run_sanity_check.py
(+11 files in other folders)
