[tool.poetry]
name = "gabornet"
version = "0.2.0"
description = ""
authors = ["an.alekseev <alekseev.as@phystech.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.0"
pytest = "^6.0.1"
numpy = "^1.19.1"
torch = "^1.6.0"
torchvision = "^0.7.0"

[tool.poetry.dev-dependencies]
pep257 = "^0.7.0"
pylint = "^2.6.0"
pycodestyle = "^2.6.0"
pytest-runner = "^5.2"
pytest-pylint = "^0.17.0"
pytest-pycodestyle = "^2.2.0"
pytest-pep257 = "^0.0.5"
pytest-cov = "^2.10.1"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
