[tool.poetry]
name = "GaborNet"
version = "0.2.0"
description = "Meet Gabor Layer"
repository = "https://github.com/iKintosh/GaborNet"
readme = "README.md"
authors = ["an.alekseev <alekseev.as@phystech.edu>"]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Environment :: GPU :: NVIDIA CUDA :: 10.2",
    "Operating System :: Unix"
]
packages = [
    { include = "GaborNet" }
]

[tool.poetry.dependencies]
python = "^3.6.1"
numpy = "^1.19.1"
torch = "^1.6.0"
torchvision = "^0.7.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pep257 = "^0.7.0"
pylint = "^2.6.0"
pycodestyle = "^2.6.0"
pytest-runner = "^5.2"
pytest-pylint = "^0.17.0"
pytest-pycodestyle = "^2.2.0"
pytest-pep257 = "^0.0.5"
pytest-cov = "^2.10.1"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
